--- a/src/pages/admin-rp-corte-codigos/admin-rp-corte-codigos.html
+++ b/src/pages/admin-rp-corte-codigos/admin-rp-corte-codigos.html
@@ -119,7 +119,7 @@
       </ion-item>
 
       
-      <!-- <ion-item class="card_atras" >
+      <ion-item class="card_atras" >
         <img class="icon" src="../assets/imgs/icons/profile.png" item-start>
         <a class="blanco_2"></a>
         <h4 class="blanco_1"  ></h4>
@@ -133,9 +133,11 @@
                 </div>
 
         </ng-container>
-      </ion-item> -->
+      </ion-item>
 
   </ion-card-content>
   
 </ion-card>
+<br>
+
 </ion-content>
