--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -23,9 +23,10 @@
     </ion-fab>
     <br>
     <div>
-        <font style="opacity: .5;" size=""> ACEPATADO</font><br>
-        <span style="opacity: .5;">________________</span>
+        <font style="opacity: .5;" size="">Gestión de reservación</font><br>
+        <!-- <span style="opacity: .5;">________________</span> -->
     </div>
+    <hr>
     <div *ngFor="let usuario of usuarios">
         <div *ngIf="usuario.uid == reserv.idUsuario">
 
@@ -40,7 +41,7 @@
                 <ion-row class="color1">
                     <ion-item class="color1">
                         <ion-label stacked><b>Nombre</b></ion-label>
-                        <ion-input type="text" placeholder="{{reserv.numPersas}}" value="{{reserv.numPersonas}}"></ion-input>
+                        <ion-input type="text" value="{{usuario.displayName}}"></ion-input>
                     </ion-item>
                 </ion-row>
                 <hr>
