Actualización detalle reservacion

--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -193,10 +193,10 @@
                 Cancelar Reservación -->
                     <button ion-button color="danger" outline large>Cancelar </button>
                 </ion-col>
-                <ion-col col-6 text-center (click)="Aceptar(reserv.uid)">
+                <ion-col col-6 text-center>
                     <!-- <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle" class="icono"></ion-icon>
                 Aceptar Reservación -->
-                    <button ion-button color="secondary" large (click)="getUsersPusNoti()">Aceptar </button>
+                    <button ion-button color="secondary" large (click)="Aceptar(reserv.uid)">Aceptar </button>
                 </ion-col>
             </ion-row>
             <br><br>
