Copiar codfo RP
-ionic cordova plugin add cordova-clipboard

-npm install --save @ionic-native/clipboard@4

--- a/src/pages/admin-rp-codigo/admin-rp-codigo.html
+++ b/src/pages/admin-rp-codigo/admin-rp-codigo.html
@@ -23,11 +23,11 @@
 
           <ion-item>
 
-            <ion-input readonly="{{isReadonly}}" type="text" value="{{ codigo.codigo }} "></ion-input>
+            <ion-input readonly="{{isReadonly}}" type="text" value="{{ codigo.codigo }}"></ion-input>
 
           </ion-item>
 
-          <button ion-button clear item-end>Copiar</button>
+          <button ion-button clear item-end (click)="copyText()" >Copiar</button>
 
       </ion-item>
 
