--- a/src/pages/administrar-reservaciones/administrar-reservaciones.html
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.html
@@ -54,7 +54,7 @@
                                 </ion-col>
 
                                 <ion-col col-12>
-                                    <b>{{ (reservacion.idUsuario | getNameUser | async)?.phoneNumber }}</b>
+                                    <b>{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
                                 </ion-col>
                             </ion-row>
                         </ion-col>
