--- a/src/pages/administrar-reservaciones/administrar-reservaciones.html
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.html
@@ -32,156 +32,190 @@
     <br>
     <div *ngFor="let reservacion of reservaciones">
 
-            <div *ngIf="reservacion.estatus == 'Creando'" class="espacio">
+        <div *ngIf="reservacion.estatus == 'Creando'" class="espacio">
 
-                <div class="loader"></div>
+            <div class="loader"></div>
 
-                <ion-card class="color1">
-                    <br>
-                    <ion-row>
-                        <ion-col col-12 text-center>
-                            <ion-row>
+            <ion-card class="color1">
+                <br>
+                <ion-row>
+                    <ion-col col-12 text-center>
+                        <ion-row>
 
-                                <ion-col col-12>
+                            <ion-col col-12>
 
-                                    <div text-center>
+                                <div text-center>
 
-                                        <ion-icon style="font-size: 4.5rem; color: #FFC149;" ios="ios-person"
-                                            md="md-person"></ion-icon>
+                                    <!-- <ion-icon style="font-size: 4.5rem; color: #FFC149;" ios="ios-person"
+                                            md="md-person"></ion-icon> -->
 
-                                    </div>
+                                    <div align="center">
 
-                                </ion-col>
-
-                                <ion-col col-12>
-                                    <b>{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
-                                </ion-col>
-                            </ion-row>
-                        </ion-col>
-                    </ion-row><br>
-
-                    <hr size="50px">
-                    <br>
-                    <ion-row>
-                        <ion-col col-12 text-center>
-                            <ion-row>
-                                <ion-col col-4>
-                                    <b>Hora</b>
-                                </ion-col>
-                                <ion-col col-4>
-                                    <b>Personas</b>
-                                </ion-col>
-                                <ion-col col-4>
-                                    <b>Fecha</b>
-                                </ion-col>
-                            </ion-row>
-
-                            <ion-row>
-                                <ion-col col-4>
-                                    {{reservacion.hora}}
-                                </ion-col>
-                                <ion-col col-4>
-                                    {{reservacion.numPersonas}}
-                                </ion-col>
-                                <ion-col col-4>
-                                    {{ reservacion.fechaR | date : 'dd/MM/yyyy'}}
-                                </ion-col>
-                            </ion-row>
-
-                            <ion-row>
-                                <!-- <button (click)="consultaReservacion(reservacion.idReservacion)"> -->
-                                <br>
-                                <br>
-                                <ion-col col-12 text-center>
-                                    <!-- <button class="btn" (click)="consultaReservacion(reservacion.idReservacion)">Detalles
-                                </button> -->
-                                    <button ion-button class="colorBlanco"
-                                        (click)="consultaReservacion(reservacion.idReservacion)">Detalles</button>
-                                </ion-col>
-                                <br>
-                            </ion-row>
-                        </ion-col>
-                    </ion-row>
-                    <br>
-                </ion-card>
-            </div>
-            <!-- COMPARTIDAS -->
-
-            <div *ngIf="reservacion.estatus == 'CreadaCompartida'" class="espacio">
-
-                <div class="loader"></div>
-
-                <ion-card class="color1">
-                    <br>
-                    <ion-row>
-                        <ion-col col-12 text-center>
-                            <ion-row>
-
-                                <ion-col col-12>
-
-                                    <div text-center>
-
-                                        <ion-icon style="font-size: 4.5rem; color: #FFC149;" ios="ios-people"
-                                            md="md-people"></ion-icon>
+                                        <img class="imagen_perfil" src="{{ (reservacion.idUsuario | getNameUser | async)?.photoURL }}" />
 
                                     </div>
 
-                                </ion-col>
+                                </div>
 
-                                <ion-col col-12>
+                            </ion-col>
 
-                                    <b>{{ reservacion.idUsuario | getNameUser  | async }}</b>
+                            <ion-col col-12>
+                                <b style="text-transform: uppercase">{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
+                                <p style="font-size: 9px;">(Reservación tipo normal)</p>
+                            </ion-col>
+                        </ion-row>
+                    </ion-col>
+                </ion-row><br>
 
-                                </ion-col>
-                            </ion-row>
-                        </ion-col>
-                    </ion-row><br>
+                <hr size="50px">
+                <br>
+                <ion-row>
+                    <ion-col col-12 text-center>
+                        <ion-row>
+                            <ion-col col-4>
 
-                    <hr size="50px">
-                    <br>
-                    <ion-row>
-                        <ion-col col-12 text-center>
-                            <ion-row>
-                                <ion-col col-4>
-                                    <b>Hora</b>
-                                </ion-col>
-                                <ion-col col-4>
-                                    <b>Personas</b>
-                                </ion-col>
-                                <ion-col col-4>
-                                    <b>Fecha</b>
-                                </ion-col>
-                            </ion-row>
+                                <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon> <b> Hora</b>
 
-                            <ion-row>
-                                <ion-col col-4>
-                                    {{reservacion.hora}}
-                                </ion-col>
-                                <ion-col col-4>
-                                    {{reservacion.numPersonas}}
-                                </ion-col>
-                                <ion-col col-4>
-                                    {{ reservacion.fechaR | date : 'dd/MM/yyyy'}}
-                                </ion-col>
-                            </ion-row>
+                            </ion-col>
+                            <ion-col col-4>
 
-                            <ion-row>
-                                <!-- <button (click)="consultaHistorial(reservacion.idReservacion)"> -->
-                                <br>
-                                <br>
-                                <ion-col col-12 text-center>
-                                    <!-- <button class="btn" (click)="consultaReservacion(reservacion.idReservacion)">Detalles
+                                <ion-icon ios="ios-checkmark" md="md-checkmark" item-start style="color: #fcc04d"></ion-icon><b> Personas</b>
+
+                            </ion-col>
+                            <ion-col col-4>
+
+                                <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d"></ion-icon><b> Fecha</b>
+
+                            </ion-col>
+                        </ion-row>
+
+                        <ion-row>
+                            <ion-col col-4>
+                                {{ reservacion.hora }}
+                            </ion-col>
+                            <ion-col col-4>
+                                {{ reservacion.numPersonas }}
+                            </ion-col>
+                            <ion-col col-4>
+                                {{ reservacion.fechaR | date : 'dd/MM/yyyy'}}
+                            </ion-col>
+                        </ion-row>
+
+                        <ion-row>
+                            <!-- <button (click)="consultaReservacion(reservacion.idReservacion)"> -->
+                            <br>
+                            <br>
+                            <ion-col col-12 text-center>
+                                <!-- <button class="btn" (click)="consultaReservacion(reservacion.idReservacion)">Detalles
                                 </button> -->
-                                    <button ion-button color1 class="colorBlanco"
-                                        (click)="consultaReservacion(reservacion.idReservacion)">Detalles</button>
-                                </ion-col>
                                 <br>
-                            </ion-row>
-                        </ion-col>
-                    </ion-row>
-                    <br>
-                </ion-card>
-            </div>
+                                <button ion-button block round class="btnDetalle" (click)="consultaReservacion(reservacion.idReservacion)">Detalles</button>
+                            </ion-col>
+                            <br>
+                        </ion-row>
+                    </ion-col>
+                </ion-row>
+                <br>
+            </ion-card>
+        </div>
+        <!-- COMPARTIDAS -->
+
+        <div *ngIf="reservacion.estatus == 'CreadaCompartida'" class="espacio">
+
+            <div class="loader"></div>
+
+            <ion-card class="color1">
+                <br>
+                <ion-row>
+                    <ion-col col-12 text-center>
+                        <ion-row>
+
+                            <ion-col col-12>
+
+                                <div text-center>
+
+                                    <!-- <ion-icon style="font-size: 4.5rem; color: #FFC149;" ios="ios-people"
+                                            md="md-people"></ion-icon> -->
+
+                                    <div align="center">
+
+                                        <img class="imagen_perfil" src="{{ (reservacion.idUsuario | getNameUser | async)?.photoURL }}" />
+
+                                    </div>
+
+                                </div>
+
+                            </ion-col>
+
+                            <ion-col col-12>
+
+                                <b style="text-transform: uppercase">{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
+                                <p style="font-size: 9px;">(Reservación tipo compartida)</p>
+
+                            </ion-col>
+                        </ion-row>
+                    </ion-col>
+                </ion-row><br>
+
+                <hr size="50px">
+                <br>
+                <ion-row>
+                    <ion-col col-12 text-center>
+                        <ion-row>
+                            <ion-col col-4>
+
+                                <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon><b>
+                                    Hora</b>
+
+                            </ion-col>
+                            <ion-col col-4>
+
+                                <ion-icon ios="ios-checkmark" md="md-checkmark" item-start style="color: #fcc04d">
+                                </ion-icon><b> Personas</b>
+
+                            </ion-col>
+                            <ion-col col-4>
+
+                                <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d">
+                                </ion-icon><b> Fecha</b>
+
+                            </ion-col>
+                        </ion-row>
+
+                        <ion-row>
+                            <ion-col col-4>
+                                {{ reservacion.hora }}
+                            </ion-col>
+                            <ion-col col-4>
+                                {{ reservacion.numPersonas }}
+                            </ion-col>
+                            <ion-col col-4>
+                                {{ reservacion.fechaR | date : 'dd/MM/yyyy' }}
+                            </ion-col>
+                        </ion-row>
+
+                        <ion-row>
+                            <!-- <button (click)="consultaHistorial(reservacion.idReservacion)"> -->
+                            <br>
+                            <br>
+                            <ion-col col-12 text-center>
+                                <!-- <button class="btn" (click)="consultaReservacion(reservacion.idReservacion)">Detalles
+                                </button> -->
+                                <br>
+                                <button ion-button block round class="btnDetalle"
+                                    (click)="consultaReservacion(reservacion.idReservacion)">
+
+                                    Detalles
+
+                                </button>
+                            </ion-col>
+                            <br>
+                        </ion-row>
+                    </ion-col>
+                </ion-row>
+                <br>
+            </ion-card>
+        </div>
     </div>
 
 </ion-content>
