--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -130,7 +130,7 @@
 
       <ion-icon ios="ios-clock" md="md-clock" item-start style="color: #fcc04d"></ion-icon>
 
-      Fecha reservación
+      Hora reservación
 
       <ion-note item-end>
 
